--- a/tinyERP/tinyERP/Views/EditBudgetView.xaml
+++ b/tinyERP/tinyERP/Views/EditBudgetView.xaml
@@ -42,7 +42,7 @@
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="0" Margin="0,10,10,-10" HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" 
-                        Command="{Binding NewCommand}" CommandParameter="{Binding ElementName=DetailedBudget}" ToolTip="Akzeptieren">
+                        Command="{Binding NewCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}" ToolTip="Akzeptieren">
                     <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
                 </Button>
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Verwerfen" IsCancel="True">
