--- a/tinyERP/tinyERP/Views/EditCustomerView.xaml
+++ b/tinyERP/tinyERP/Views/EditCustomerView.xaml
@@ -9,7 +9,6 @@
         mc:Ignorable="d"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        x:Name="CustomerView"
         Title="Kunde bearbeiten" Height="320" Width="550" MinWidth="550" MinHeight="320" MaxHeight="320">
 
     <controls:MetroWindow.Resources>
@@ -51,7 +50,7 @@
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,10,10,-10" HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" 
-                        Command="{Binding SaveCommand}" CommandParameter="{Binding ElementName=CustomerView}" ToolTip="Kunde hinzufügen">
+                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}" ToolTip="Kunde hinzufügen">
                     <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
                 </Button>
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen" IsCancel="True">
