--- a/tinyERP/tinyERP/Views/EditTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/EditTransactionView.xaml
@@ -9,7 +9,6 @@
         mc:Ignorable="d"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        x:Name="TransactionView"
         Title="Buchung bearbeiten" Height="320" Width="550" MinWidth="550" MinHeight="320" MaxHeight="320">
 
     <controls:MetroWindow.Resources>
@@ -56,7 +55,7 @@
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,10,10,-10" HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" 
-                        Command="{Binding SaveCommand}" CommandParameter="{Binding ElementName=TransactionView}" ToolTip="Buchung hinzufügen">
+                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}" ToolTip="Buchung hinzufügen">
                     <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
                 </Button>
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen" IsCancel="True">
