--- a/tinyERP/tinyERP/Views/DocumentView.xaml
+++ b/tinyERP/tinyERP/Views/DocumentView.xaml
@@ -30,7 +30,7 @@
                       ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,10">
                 <DataGrid.Columns>
                     <DataGridTextColumn MinWidth="100" Width="*" Header="Name" Binding="{Binding Name}"/>
-                    <DataGridTextColumn MinWidth="100" Width="*" Header="Tag" Binding="{Binding Tag}"/>
+                    <DataGridTextColumn MinWidth="100" Width="*" Header="Schlagworte" Binding="{Binding Tag}"/>
                     <DataGridTextColumn MinWidth="100" Width="*" Header="Dateiname" Binding="{Binding RelativePath}"/>
                     <DataGridTextColumn MinWidth="100" Width="*" Header="Ausstellungsdatum" Binding="{Binding IssueDate, StringFormat={}{0:dd.MM.yyyy}}"/>
                 </DataGrid.Columns>
