Fix B002 with LevelToMarginConverter

--- a/tinyERP/tinyERP/App.xaml
+++ b/tinyERP/tinyERP/App.xaml
@@ -22,6 +22,7 @@
                 <ResourceDictionary>
                     <converter:BooleanToRevenueConverter x:Key="MyBooleanToRevenueConverter"/>
                     <converter:EnumToDescriptionConverter x:Key="MyEnumToDescriptionConverter"/>
+                    <converter:LevelToMarginConverter x:Key="MyLevelToMarginConverter"/>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
