--- a/tinyERP/tinyERP/Views/EditTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/EditTransactionView.xaml
@@ -41,9 +41,15 @@
                         SelectedDate="{Binding Date,Mode=TwoWay}" ToolTip="Belegdatum auswählen"/>
             <TextBox HorizontalAlignment="Stretch" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" Grid.Row="3" Grid.Column="0" controls:TextBoxHelper.Watermark="Bemerkungen" Margin="10,10,10,0" 
                      Text="{Binding Comment,Mode=TwoWay,UpdateSourceTrigger=LostFocus}"/>
-            <controls:SplitButton HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" 
-                                  ItemsSource="{Binding CategoryList}" SelectedItem="{Binding SelectedCategory}" DisplayMemberPath="Name"
-                                  VerticalAlignment="Center" ToolTip="Kategorie auswählen" Margin="10" SelectedIndex="0"/>
+            <ComboBox HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" 
+                                  ItemsSource="{Binding CategoryList}" SelectedItem="{Binding SelectedCategory}"
+                                  VerticalAlignment="Center" ToolTip="Kategorie auswählen" Margin="10" SelectedIndex="0">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Margin="{Binding ParentCategoryId, Converter={StaticResource MyLevelToMarginConverter}}" Text="{Binding Name}"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
             <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="1" Height="20" controls:TextBoxHelper.Watermark="Privatanteil" Margin="10" 
                      Text="{Binding PrivatPart,Mode=TwoWay,UpdateSourceTrigger=LostFocus,TargetNullValue='',ValidatesOnNotifyDataErrors=True}"/>
 
