--- a/tinyERP/tinyERP/Views/EditTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/EditTransactionView.xaml
@@ -1,15 +1,16 @@
 ﻿<controls:MetroWindow
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        x:Class="tinyERP.UI.Views.EditTransactionView"
-        mc:Ignorable="d"
-        BorderBrush="{DynamicResource AccentColorBrush}"
-        BorderThickness="1"
-        Title="Buchung bearbeiten" Height="320" Width="550" MinWidth="550" MinHeight="320" MaxHeight="320">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    x:Class="tinyERP.UI.Views.EditTransactionView"
+    mc:Ignorable="d"
+    BorderBrush="{DynamicResource AccentColorBrush}"
+    BorderThickness="1"
+    Title="Buchung bearbeiten"
+    Width="550" MinWidth="550" Height="350" MinHeight="350" MaxHeight="350">
 
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
@@ -22,49 +23,53 @@
     <DockPanel>
         <Grid Margin="10">
             <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
-                <RowDefinition Height="50" />
+                <RowDefinition Height="70" />
+                <RowDefinition Height="70" />
+                <RowDefinition Height="70" />
+                <RowDefinition Height="90" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBox HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Height="20" controls:TextBoxHelper.Watermark="Bezeichnung" Margin="10"
-                     Text="{Binding Name,Mode=TwoWay,UpdateSourceTrigger=LostFocus,TargetNullValue='',ValidatesOnNotifyDataErrors=True}"/>
-            <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="0"  Height="20" controls:TextBoxHelper.Watermark="Betrag" Margin="10"
-                     Text="{Binding Amount,Mode=TwoWay,UpdateSourceTrigger=LostFocus,TargetNullValue='',ValidatesOnNotifyDataErrors=True}"/>
-            <DatePicker HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="0"  Height="20" Text="Wähle ein Datum" Margin="10" 
-                        SelectedDate="{Binding Date,Mode=TwoWay}" ToolTip="Belegdatum auswählen"/>
-            <TextBox HorizontalAlignment="Stretch" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" Grid.Row="3" Grid.Column="0" controls:TextBoxHelper.Watermark="Bemerkungen" Margin="10,10,10,0" 
-                     Text="{Binding Comment,Mode=TwoWay,UpdateSourceTrigger=LostFocus}"/>
-            <ComboBox HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" 
-                                  ItemsSource="{Binding CategoryList}" SelectedItem="{Binding SelectedCategory}"
-                                  VerticalAlignment="Center" ToolTip="Kategorie auswählen" Margin="10" SelectedIndex="0">
+            <Label Grid.Row="0" Grid.Column="0" Margin="10" VerticalAlignment="Top">Bezeichnung</Label>
+            <TextBox Grid.Row="0" Grid.Column="0" controls:TextBoxHelper.Watermark="Bezeichnung" Margin="10" VerticalAlignment="Bottom"
+                     Text="{Binding Name, UpdateSourceTrigger=LostFocus, TargetNullValue='', ValidatesOnNotifyDataErrors=True}" />
+            <Label Grid.Row="0" Grid.Column="1" Margin="10" VerticalAlignment="Top">Kategorie</Label>
+            <ComboBox Grid.Row="0" Grid.Column="1" ToolTip="Kategorie auswählen" Margin="10" VerticalAlignment="Bottom"
+                      ItemsSource="{Binding CategoryList}" SelectedItem="{Binding SelectedCategory}" SelectedIndex="0">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Margin="{Binding ParentCategoryId, Converter={StaticResource MyLevelToMarginConverter}}" Text="{Binding Name}"/>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="1" Height="20" controls:TextBoxHelper.Watermark="Privatanteil" Margin="10" 
-                     Text="{Binding PrivatPart,Mode=TwoWay,UpdateSourceTrigger=LostFocus,TargetNullValue='',ValidatesOnNotifyDataErrors=True}"/>
 
-            <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="10">
-                <RadioButton  GroupName="Mode" Content="Einnahme" IsChecked="{Binding IsRevenue}"/>
+            <Label Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Top">Betrag</Label>
+            <TextBox Grid.Row="1" Grid.Column="0" controls:TextBoxHelper.Watermark="Betrag" Margin="10" VerticalAlignment="Bottom"
+                     Text="{Binding Amount, UpdateSourceTrigger=LostFocus, TargetNullValue='', ValidatesOnNotifyDataErrors=True}" />
+            <Label Grid.Row="1" Grid.Column="1" Margin="10" VerticalAlignment="Top">Privatanteil (%)</Label>
+            <TextBox Grid.Row="1" Grid.Column="1" controls:TextBoxHelper.Watermark="Privatanteil (%)" Margin="10" VerticalAlignment="Bottom"
+                     Text="{Binding PrivatPart, UpdateSourceTrigger=LostFocus, TargetNullValue='', ValidatesOnNotifyDataErrors=True}" />
+
+            <Label Grid.Row="2" Grid.Column="0" Margin="10" VerticalAlignment="Top">Belegdatum</Label>
+            <DatePicker Grid.Row="2" Grid.Column="0" ToolTip="Belegdatum auswählen" Margin="10" VerticalAlignment="Bottom"
+                        SelectedDate="{Binding Date,Mode=TwoWay}" />
+            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" Margin="10" VerticalAlignment="Bottom">
+                <RadioButton GroupName="Mode" Content="Einnahme" IsChecked="{Binding IsRevenue}"/>
                 <RadioButton GroupName="Mode" Content="Ausgabe" Margin="40,0" IsChecked="{Binding IsExpense, Mode=OneWay}"/>
             </StackPanel>
 
-
-            <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,10,10,-10" HorizontalAlignment="Right">
-                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" 
-                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}" ToolTip="Buchung hinzufügen">
+            <Label Grid.Row="3" Grid.Column="0" Margin="10" VerticalAlignment="Top">Bemerkungen</Label>
+            <TextBox Grid.Row="3" Grid.Column="0" controls:TextBoxHelper.Watermark="Bemerkungen" Margin="10,34,10,10" 
+                     Text="{Binding Comment, UpdateSourceTrigger=LostFocus}" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" TextWrapping="Wrap" />
+            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Bottom">
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung speichern"
+                        Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}">
                     <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
                 </Button>
-                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen" IsCancel="True">
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Abbrechen" IsCancel="True">
                     <iconPacks:PackIconMaterial Kind="CloseCircle" Width="30" Height="30" />
                 </Button>
             </StackPanel>
