--- a/tinyERP/tinyERP/Views/DocumentView.xaml
+++ b/tinyERP/tinyERP/Views/DocumentView.xaml
@@ -22,6 +22,9 @@
                 <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding NewDocumentCommand}" ToolTip="Neues Dokument hinzufügen">
                     <iconPacks:PackIconMaterial Kind="PlusCircle" Width="40" Height="40" />
                 </Button>
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding OpenDocumentCommand}" ToolTip="Dokument öffnen">
+                    <iconPacks:PackIconMaterial Kind="Folder" Width="40" Height="40" />
+                </Button>
             </StackPanel>
 
             <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding DocumentList}" SelectedItem="{Binding SelectedDocument}" IsReadOnly="True"
