--- a/tinyERP/tinyERP/Views/EditOrderView.xaml
+++ b/tinyERP/tinyERP/Views/EditOrderView.xaml
@@ -12,7 +12,8 @@
         mc:Ignorable="d"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        Title="Auftrag bearbeiten" Width="550" MinWidth="550" Height="270" MinHeight="270" MaxHeight="270">
+        Language="de-CH"
+        Title="Auftrag bearbeiten" Width="550" MinWidth="550" Height="570" MinHeight="570" MaxHeight="570">
 
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
@@ -35,6 +36,7 @@
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
                 <RowDefinition Height="50" />
+                <RowDefinition Height="*" />
                 <RowDefinition Height="50" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -82,7 +84,39 @@
             <TextBox HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="1" Height="20" controls:TextBoxHelper.Watermark="Letzte Statusänderung" Margin="10" 
                     Text="{Binding StateModificationDate, StringFormat={}{0:dd.MM.yyyy}, Mode=OneWay}" IsReadOnly="True" IsEnabled="False" />
             
-            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="0,10,10,-10" HorizontalAlignment="Right">
+            
+            <TabControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" controls:TabControlHelper.IsUnderlined="True" Margin="10,0,10,0">
+                <TabItem Header="Offerten" controls:ControlsHelper.HeaderFontSize="24">
+                    <ListView ItemsSource="{Binding OfferList}">
+                        <ListView.Resources>
+                            <Style TargetType="GridViewColumnHeader">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </Style>
+                        </ListView.Resources>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Offerten Nummer" DisplayMemberBinding="{Binding OfferNumber}" />
+                                <GridViewColumn Header="Ausstellungsdatum"  DisplayMemberBinding="{Binding Document.IssueDate, StringFormat=d}" />
+                                <GridViewColumn Header="Dokumentenlink">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button Content="{Binding Document.RelativePath}" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}, Path=DataContext.OpenDocument}" CommandParameter="{Binding Document.RelativePath}" ToolTip="Dokument öffnen"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </TabItem>
+                <TabItem Header="Auftragsbestätigung" controls:ControlsHelper.HeaderFontSize="24">
+                    <TextBlock>Welt!</TextBlock>
+                </TabItem>
+                <TabItem Header="Rechnungen" controls:ControlsHelper.HeaderFontSize="24">
+                    <TextBlock>Welt!</TextBlock>
+                </TabItem>
+            </TabControl>
+            
+            <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,10,10,-10" HorizontalAlignment="Right">
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" 
                         Command="{Binding SaveCommand}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=controls:MetroWindow}}" ToolTip="Auftrag hinzufügen">
                     <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
