--- a/tinyERP/tinyERP/Views/EditOrderView.xaml
+++ b/tinyERP/tinyERP/Views/EditOrderView.xaml
@@ -13,7 +13,7 @@
     BorderThickness="1"
     Language="de-CH"
     Title="Auftrag bearbeiten"
-    Width="550" MinWidth="550" Height="460" MinHeight="460" MaxHeight="460">
+    Width="550" MinWidth="550" Height="600" MinHeight="600" MaxHeight="600">
 
     <controls:MetroWindow.Resources>
         <ResourceDictionary>
@@ -38,8 +38,8 @@
                 <RowDefinition Height="70" />
                 <RowDefinition Height="70" />
                 <RowDefinition Height="70" />
-                <RowDefinition Height="130" />
-                <RowDefinition Height="70" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
