--- a/tinyERP/tinyERP/Resources/ButtonAsLink.xaml
+++ b/tinyERP/tinyERP/Resources/ButtonAsLink.xaml
@@ -17,7 +17,7 @@
         </Setter>
         <Setter
             Property="Foreground"
-            Value="{StaticResource AccentColorBrush}" />
+            Value="{StaticResource AccentColorBrush4}" />
         <Style.Triggers>
             <Trigger
                 Property="IsMouseOver"
