Add Main Navigation Hover and IsSelected Color, Remove Code Behind

--- a/tinyERP/tinyERP/App.xaml
+++ b/tinyERP/tinyERP/App.xaml
@@ -23,6 +23,7 @@
                     <converter:BooleanToRevenueConverter x:Key="MyBooleanToRevenueConverter"/>
                     <converter:EnumToDescriptionConverter x:Key="MyEnumToDescriptionConverter"/>
                     <converter:LevelToMarginConverter x:Key="MyLevelToMarginConverter"/>
+                    <converter:SelectedTabToActiveButtonMultiConverter x:Key="SelectedTabConverter"/>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
